# ai-engineering-learn

./: .dockerignore  .env.proxy.example  .env.tool.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose-proxy.yml  docker-compose-tool.yml  main.py  pyproject.toml
.claude/commands/: commit-message.md
.claude/skills/ai-teacher/: SKILL.md
.claude/skills/ai-teacher/references/: gate-protocol.md  progress-format.md
.zed/: settings.json
docs/superpowers/specs/: 2026-07-09-ai-teacher-skill-design.md
lessons/: learning-plan.md  p0-llm-mechanics.md  p1-production-rag.md  p2-agents-orchestration.md  p3-evals.md  p4-observability-cost.md  p5-hardening-scale.md  p6-staying-current.md  phase-1-project.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  progress.md
services/chat/: Dockerfile
services/chat-ui/: .dockerignore  .gitignore  Dockerfile  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
services/chat-ui/app/: app.vue
services/chat-ui/app/components/: ChatInput.vue  ChatMessage.vue
services/chat-ui/app/composables/: useChat.ts
services/chat-ui/app/utils/: markdown.ts
services/chat-ui/server/api/: chat.post.ts
services/chat/src/: agent_loop.py  ai_client.py  corpus.py  extract.py  main.py  similar.py  system_prompt.md
services/chat/tests/: test_agent_loop.py  test_extract.py  test_similar.py
services/proxy/: config.yaml  verify_trace.py
