[project]
name = "ai-engineering-learn"
version = "0.1.0"
description = "AI Engineering Learn"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langfuse>=4.13.0",
    "langgraph>=1.2.8",
    "litellm>=1.91.0",
    "pydantic>=2.13.4",
    "qdrant-client>=1.18.0",
    "streamlit>=1.59.0",
    "structlog>=26.1.0",
]

[tool.uv.sources]
ai-engineering-learn = { workspace = true }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]
