[project]
name = "ai-engineering-learn"
version = "0.1.0"
description = "AI Engineering Learn"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langfuse>=4.13.0",
    "langgraph>=1.2.8",
    "litellm>=1.91.0",
    "neo4j>=6.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.59.0",
    "structlog>=26.1.0",
    "temporalio>=1.30.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
